2022-03-02  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r290717.
        https://bugs.webkit.org/show_bug.cgi?id=237409

        Speedometer2

        Reverted changeset:

        "Add a DeferTraps scope"
        https://bugs.webkit.org/show_bug.cgi?id=237306
        https://commits.webkit.org/r290717

2022-03-02  Justin Michaud  <justin_michaud@apple.com>

        Refactor OpcodeTraits to support the possibility of having 2-byte WASM opcode ids in bytecode streams
        https://bugs.webkit.org/show_bug.cgi?id=237347

        The number of WASM opcodes will increase beyond 255 when WASM SIMD is implemented, and so this patch
        changes OpcodeTraits to allow for the possibility of having two-byte WASM opcodes without regressing
        JS. We have to thread these OpcodeTraits everywhere that they are used so that code can read the
        correct value when decoding an instruction stream. This patch does not change the size of WASM opcodes
        yet, although I have tested that the test suite still passes if we do increase the opcode size.

        Reviewed by Keith Miller.

        * bytecode/BytecodeBasicBlock.cpp:
        (JSC::BytecodeBasicBlock<OpcodeTraits>::BytecodeBasicBlock):
        (JSC::BytecodeBasicBlock<OpcodeTraits>::addLength):
        (JSC::BytecodeBasicBlock<OpcodeTraits>::shrinkToFit):
        (JSC::isJumpTarget):
        (JSC::BytecodeBasicBlock<OpcodeTraits>::computeImpl):
        (JSC::BytecodeBasicBlock<JSOpcodeTraits>::compute):
        (JSC::BytecodeBasicBlock::BytecodeBasicBlock): Deleted.
        (JSC::BytecodeBasicBlock::addLength): Deleted.
        (JSC::BytecodeBasicBlock::shrinkToFit): Deleted.
        (JSC::BytecodeBasicBlock::computeImpl): Deleted.
        (JSC::BytecodeBasicBlock::compute): Deleted.
        * bytecode/BytecodeBasicBlock.h:
        (JSC::BytecodeBasicBlock::addSuccessor):
        * bytecode/BytecodeDumper.cpp: