@@ -1,3 +1,12 @@
+2022-03-03  Adrian Perez de Castro  <aperez@igalia.com>
+
+        Non-unified build fixes, early March 2022 edition
+        https://bugs.webkit.org/show_bug.cgi?id=237420
+
+        Unreviewed non-unified build fixes.
+
+        * llint/LLIntExceptions.h: Add forward declaration for WasmInstruction.
+
 2022-03-02  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r290717.
